z-index of lightbox fixed
git-svn-id: https://plugins.svn.wordpress.org/gallery-bank/trunk@721939 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visuallightbox.css
+++ b/css/visuallightbox.css
@@ -17,6 +17,7 @@
 	text-align:center;
 	color:#151410;
 	line-height:0;
+	z-index:99999;
 }
 #vlb1lightbox td{
 	vertical-align:top;
